AmicarDP/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Agenda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comuna__c</fullName>
        <label>Comuna</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Comuna</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Control_CallCenter__c</fullName>
        <description>Es visible por los ejecutivos pero no puede ser editado. Solo puede ser editado por Jane y las personas seleccionadas por Carla Torres</description>
        <label>Control CallCenter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asignado</fullName>
                </value>
                <value>
                    <fullName>Llamado no exitoso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direcci_n_Locales__c</fullName>
        <label>Dirección Locales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Direcci_n_Locales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ejecutivo_F_I__c</fullName>
        <label>Ejecutivo F&amp;I</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Local_Comuna__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABALLAY FRIGERIO DANIELA BELEN</fullName>
                </value>
                <value>
                    <fullName>ABARCA LATORRE GLADYS ELIZABETH</fullName>
                </value>
                <value>
                    <fullName>ADRIAZOLA HENRIQUEZ JAVIER ARNAL</fullName>
                </value>
                <value>
                    <fullName>AGUAYO GUERRA MARIA IGNACIA</fullName>
                </value>
                <value>
                    <fullName>AGUAYO OPAZO EDUARDO IGNACIO</fullName>
                </value>
                <value>
                    <fullName>AGUILA ROSAS CAMILA BELEN</fullName>
                </value>
                <value>
                    <fullName>AGUIRRE MORALES DANIELA ALEJANDR</fullName>
                </value>
                <value>
                    <fullName>AHUMADA MOYA GISSEL MARGARITA</fullName>
                </value>
                <value>
                    <fullName>ALARCON GONZALEZ VANESSA ALLISON</fullName>
                </value>
                <value>
                    <fullName>ALEGRIA MEDINA CLAUDIA</fullName>
                </value>
                <value>
                    <fullName>ALGUERNO MUÑOZ CLAUDIA P.</fullName>
                </value>
                <value>
                    <fullName>ALIQUINTUI VERA GABRIELA</fullName>
                </value>
                <value>
                    <fullName>ALLENDES RODRIGUEZ PAZ</fullName>
                </value>
                <value>
                    <fullName>ALVAREZ ARAVENA GONZALO CLAUDIO</fullName>
                </value>
                <value>
                    <fullName>ANDRADE VERA ELIZABETH ANDREA</fullName>
                </value>
                <value>
                    <fullName>ARANEDA ORTIZ TAMARA CECILIA</fullName>
                </value>
                <value>
                    <fullName>ARANGUIZ AGUILERA JIMMY ANDRES</fullName>
                </value>
                <value>
                    <fullName>ARAVENA CALFUNAO FELIPE ANDRES</fullName>
                </value>
                <value>
                    <fullName>ARENAS TAPIA CLAUDIA PAOLA</fullName>
                </value>
                <value>
                    <fullName>AROSTICA VERDUGO DAMARIS LISSETTE</fullName>
                </value>
                <value>
                    <fullName>ARRIAGADA LETELIER ISRAEL ESTEBA</fullName>
                </value>
                <value>
                    <fullName>ASTORGA LIZANA CRISTIAN ANDRES</fullName>
                </value>
                <value>
                    <fullName>BARRIGA RIVEROS FELIPE ALBERTO</fullName>
                </value>
                <value>
                    <fullName>BASCUÑAN MORA CARLA ANDREA</fullName>
                </value>
                <value>
                    <fullName>BASCUR BENARDOS ROCIO FERNANDA</fullName>
                </value>
                <value>
                    <fullName>BERRIOS SAN MARTIN SEBASTIAN IGNACIO</fullName>
                </value>
                <value>
                    <fullName>BRAVO CANCEC EDUARDO LUIS</fullName>
                </value>
                <value>
                    <fullName>BRIONES DEL PINO MIGUEL PABLO</fullName>
                </value>
                <value>
                    <fullName>BRIONES REBOLLEDO PATRICIA ALEJANDRA</fullName>
                </value>
                <value>
                    <fullName>BUCAREY LEFNO JOHAN ALEJANDRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_de_Actividad__c</fullName>
        <label>Estado de Actividad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DATO ERRONEO</fullName>
                </value>
                <value>
                    <fullName>NO CONTESTA</fullName>
                </value>
                <value>
                    <fullName>CONTACTADO</fullName>
                </value>
                <value>
                    <fullName>AGENDADO</fullName>
                </value>
                <value>
                    <fullName>APERTURA DE CORREO</fullName>
                </value>
                <value>
                    <fullName>REFERENCIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importador__c</fullName>
        <label>Importador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Importadores</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Comuna__c</fullName>
        <label>Local Comuna</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Marca__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antofagasta 149 YUSIC JUMBO</fullName>
                </value>
                <value>
                    <fullName>Antofagasta 18 AG ANTOFAGASTA - 91 FORTALEZA ANTOFAGASTA - 32 CARMEISTER ANTOFAGASTA</fullName>
                </value>
                <value>
                    <fullName>Antofagasta 19 AG AUTOPLAZA ANTOFAGASTA - 99 FORTALEZA PLAZA ANTOFAGASTA</fullName>
                </value>
                <value>
                    <fullName>Antofagasta  92 AUTOS YUSIC COSTANERA</fullName>
                </value>
                <value>
                    <fullName>Antofagasta 9 AUTOS YUSIC ANTOFAGASTA</fullName>
                </value>
                <value>
                    <fullName>Buin 155 COMERCIAL ERRAZURIZ</fullName>
                </value>
                <value>
                    <fullName>Buin 45 CURIFOR BUIN</fullName>
                </value>
                <value>
                    <fullName>Calama 17 AG CALAMA - 90 FORTALEZA CALAMA - 162 CARMEISTER CALAMA</fullName>
                </value>
                <value>
                    <fullName>Calama 43 AUTOS YUSIC CALAMA</fullName>
                </value>
                <value>
                    <fullName>Castro 52 EXEQUIEL BERRIOS CASTRO</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 138 MOVICETER (JAC)</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 140 H MOTORES S.A PLAZA OESTE (INCLUYE USADOS)</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 140 H MOTORES SA PLAZA OESTE</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 150 AUTOSHOPPING DERCOCENTER</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 189 VIRTUAL PLAZA OESTE</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 195  H MOTORES S.A PLAZA OESTE</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 24 PLAZA OESTE (MZD-SMG-RNT)</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 25 PLAZA OESTE USADOS</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 61 H MOTORES LONQUEN</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 61 PLAZA OESTE SUZUKI</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 75 PLAZA OESTE (GWM-CHA-JAC) CHANGAN GEELY JAC GREATWALL</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 75 PLAZA OESTE (GWM-CHA-JAC-GEE)</fullName>
                </value>
                <value>
                    <fullName>Cerrillos 93 AG CERRILLOS - 109 FORTALEZA CERRILLOS - 180 CARMEISTER CERRILLOS</fullName>
                </value>
                <value>
                    <fullName>Chillan 51 CURIFOR CHILLÁN</fullName>
                </value>
                <value>
                    <fullName>Chillán 51 SERGIO ESCOBAR CHILLÁN</fullName>
                </value>
                <value>
                    <fullName>Concepción 118 SERGIO ESCOBAR CARRERA</fullName>
                </value>
                <value>
                    <fullName>Concepción 134 SERGIO ESCOBAR CNT</fullName>
                </value>
                <value>
                    <fullName>Concepción 142 SERGIO ESCOBAR PAICAVI CHINOS</fullName>
                </value>
                <value>
                    <fullName>Concepción 142 SERGIO ESCOBAR PAICAVI CHINOS, 48 SERGIO ESCOBAR PAICAVI</fullName>
                </value>
                <value>
                    <fullName>Concepción  164 CARMEISTER CONCEPCION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BAIC</fullName>
                </value>
                <value>
                    <fullName>BRILLIANCE</fullName>
                </value>
                <value>
                    <fullName>CHANGAN</fullName>
                </value>
                <value>
                    <fullName>GEELY</fullName>
                </value>
                <value>
                    <fullName>GREAT WALL</fullName>
                </value>
                <value>
                    <fullName>HAVAL</fullName>
                </value>
                <value>
                    <fullName>HYUNDAI</fullName>
                </value>
                <value>
                    <fullName>JAC</fullName>
                </value>
                <value>
                    <fullName>MAHINDRA</fullName>
                </value>
                <value>
                    <fullName>MAZDA</fullName>
                </value>
                <value>
                    <fullName>MINI</fullName>
                </value>
                <value>
                    <fullName>RENAULT</fullName>
                </value>
                <value>
                    <fullName>SUZUKI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimo_Evento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultimo Evento</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>